--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.35.0",
+    "axios": "^0.27.2",
+    "faunadb": "^4.6.0",
     "next": "12.2.3",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "stripe": "^10.0.0"
+    "stripe": "^10.1.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "eslint": "8.20.0",
