--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "stripe": "^10.1.0"
+    "stripe": "^10.1.0",
+    "stripe-cli": "^0.1.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
+    "babel-jest": "^29.2.2",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "jest": "^29.2.2",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
