--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "12.2.3",
     "jest": "^29.2.2",
     "jest-dom": "^4.0.0",
+    "sass": "^1.55.0",
     "typescript": "^4.7.4"
   }
 }
